# primeleague-helper

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  bacon.toml  docker-compose.yml
migrations/: 20250206115449_batman.sql
primeleague-helper/: .env.bak  Cargo.toml  bacon.toml
primeleague-helper/src/: db.rs  helper.rs  lib.rs  main.rs
primeleague-helper/src/database/: mod.rs  store.rs
primeleague-helper/src/routes/: index.rs  mod.rs  teams.rs
primeleague-helper/src/routes/new_teams/: mod.rs
primeleague-helper/src/templates/: mod.rs  new_teams.rs
primeleague-helper/templates/: error.html  index.html  new_teams.html  team.html
src/: appstate.rs  db.rs  helper.rs  index.rs  main.rs  models.rs  players.rs  routes.rs  teams.rs  templates.rs
src/database/: store.rs
src/models/: player.rs  team.rs
src/routes/: mod.rs  new_teams.rs  teams.rs
src/routes/new_teams/: mod.rs
src/templates/: error.rs  mod.rs  new_teams.rs  teams.rs
templates/: base.html  index.html  new_teams_matches.html  player.html  players.html  split.html  team.html  teams.html
