[package]
name = "primeleague-helper"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12.1", features = ["with-axum", "serde", "serde_json"] }
askama_axum = "0.4.0"
axum = { version = "0.7.7", features = ["macros"] }
reqwest = "0.12.8"
scraper = "0.20.0"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["fs"] }
